kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: school-management
  labels:
    name: school-management
